unpackaged/main/default/objects/dfsle__Document__c/fields/dfsle__Envelope__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Envelope__c</fullName>
    <description>Envelope</description>
    <inlineHelpText>Envelope</inlineHelpText>
    <label>DocuSign Envelope</label>
    <referenceTo>dfsle__Envelope__c</referenceTo>
    <relationshipLabel>DocuSign Envelope Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>