unpackaged/main/default/objects/dfsle__Document__c/fields/dfsle__Extension__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Extension__c</fullName>
    <label>Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>