unpackaged/main/default/objects/dfsle__Document__c/fields/dfsle__IsReplacement__c.field-meta.xml
<CustomField>
    <fullName>dfsle__IsReplacement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Replacement</label>
    <type>Checkbox</type>
</CustomField>