unpackaged/main/default/objects/dfsle__Document__c/fields/dfsle__Replacement__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Replacement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Replacement document</inlineHelpText>
    <label>Replacement Document</label>
    <referenceTo>dfsle__Document__c</referenceTo>
    <relationshipLabel>Replacement Document</relationshipLabel>
    <relationshipName>Replacement</relationshipName>
    <type>Lookup</type>
</CustomField>