unpackaged/main/default/objects/dfsle__Document__c/fields/dfsle__Size__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Size__c</fullName>
    <description>Document Size</description>
    <inlineHelpText>Document Size</inlineHelpText>
    <label>Document Size</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>